# Thaithon

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: ai_carrtyon.txt  ai_carryon.txt
examples/: x.py  y.py
libs/: คณิต.py  ซีเอสวี.py  ระบบ.py  สถิติ.py  สุ่ม.py  อาร์กิวเมนต์.py  เจสัน.py  เรกซ์.py  เวลา.py  เว็บ.py  เส้นทาง.py  ไพทอน_builtins.py  ไพท่อน.py
tests/: test_data_libs.py  test_datetime.py  test_helpers.py  test_math.py  test_math_extended.py  test_random_stats.py  test_sleep.py
tools/: debug_all.py  debug_unicode.py  fix_all.py  smoke_installed.py
